# games-analyser

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: actions.yml
games_analyser/: code_main.py
